vlib/v/checker/tests/incorrect_name_struct_field.vv
struct Abc {
    _a int
}
